# consul-mcp-agents

./: .gitignore  .tflint.hcl  CLAUDE.md  PROMPT.md  README.md  Taskfile.yml  pyproject.toml
.claude/: settings.json
.claude/rules/: terraform.md
.github/workflows/: terraform.yml
config/: settings.yaml
docker/: Dockerfile  entrypoint.sh
docs/: PRACTICES.md  architecture.md  blog-securing-agentic-platforms.md  mesh.md
docs/diagrams/: generate_diagrams.py
packer/: gcp-almalinux-consul-server.pkr.hcl
packer/configs/: vault-agent-consul.hcl.tmpl
packer/scripts/: provision-consul.sh  provision-vault-agent.sh
policies/: capabilities.yaml
reports/: tf-analysis-2026-03-16.md  tf-analysis-2026-05-01.md
scripts/: consul-bootstrap-acl.sh  consul-iap-tunnel.sh  consul-ssh.sh  gke-ensure-ready.sh  hcp-list-orphans.sh  hcp-token.sh  preflight.sh  smoke-test.sh  sync-k8s-secret.sh  tf-fix-k8s-identity.sh  tfvars-get.sh  tfvars-set.sh  wait-acl-init.sh
src/vault_mcp_agents/: __init__.py  agent.py  config.py  main.py  vault_client.py
src/vault_mcp_agents/mcp/: __init__.py  _token_refresh.py  compute_server.py  data_server.py
tf/modules/consul/: main.tf  outputs.tf  variables.tf
tf/modules/gke-consul-dataplane/: cluster.tf  consul-helm.tf  outputs.tf  variables.tf
tf/modules/hcp-vault/: main.tf  outputs.tf  variables.tf
tf/modules/mcp-agents-k8s/: .terraform.lock.hcl  consul.tf  deployment.tf  namespace.tf  outputs.tf  rbac.tf  secret.tf  service.tf  variables.tf  vault-agent-config.tf
tf/modules/network/: main.tf  outputs.tf  variables.tf
(+28 files in other folders)
